// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectHeightResponsive with responsiveHeight 1`] = `
<ReactHeight
  dirty={true}
  getElementHeight={[Function]}
  hidden={false}
  onHeightReady={[Function]}
  style={
    Object {
      "height": "70%",
    }
  }
>
  <_class
    filterFunction={[Function]}
    height={400}
    items={Array []}
    responsiveHeight="70%"
    selectedItems={Array []}
  />
</ReactHeight>
`;

exports[`MultiSelectHeightResponsive without responsiveHeight 1`] = `
<ReactHeight
  dirty={true}
  getElementHeight={[Function]}
  hidden={false}
  onHeightReady={[Function]}
  style={
    Object {
      "height": "400px",
    }
  }
>
  <_class
    filterFunction={[Function]}
    height={400}
    items={Array []}
    responsiveHeight="400px"
    selectedItems={Array []}
  />
</ReactHeight>
`;
